--- a/index.html
+++ b/index.html
@@ -7,10 +7,22 @@
     <title>Revou Course</title>
 </head>
 <body>
-    <H1>REVOU COURSE</H1>
+    <h1>HEADER SECTION</h1>
+    <H1>REVOU COURSE ON HEADING 1</H1>
     <h2>Heading 2</h2>
 
-    <h3>Heading 3 Commit</h3>
+    <hr>
+
+    <h3>Heading 3</h3>
     <p>First paragraph</p>
+    <p>second paragraph</p>
+
+    <h4>heading 4</h4>
+    <P>First paragraph</P>
+    <p>second paragraph</p>
+
+    <hr>
+    <h5>THIS IS FOOTER</h5>
+    <p>&copy; 2023 Revou Course</p>
 </body>
 </html>
